ORC-1791: Remove `commons-lang3` dependency